# audio_converter

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 5ae64d640395_first_migrate.py  9ff45477ef40_first_migrate_docker_pg.py  d79651800a30_first_migration.py
pg_data/base/1/: 1259  2619  2619_vm  2696  2840  2841  pg_internal.init
pg_data/base/5/: pg_internal.init
pg_data/global/: 1260  pg_control  pg_internal.init
pg_data/pg_stat/: pgstat.stat
src/: Dockerfile  config.py  run.py
src/db/: __init__.py  crud.py  db.py  models.py  schemas.py
src/routes/: endpoints.py  handlers.py
src/services/: service.py
src/utils/: utils.py
