[tool.poetry]
name = "wavtomp3"
version = "0.1.0"
description = ""
authors = ["mgd <mr.zizikk@gamil.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asyncpg = "^0.27.0"
sqlalchemy = "^2.0.15"
fastapi = "^0.95.2"
pydantic = "^1.10.7"
pydub = "^0.25.1"
uvicorn = "^0.22.0"
alembic = "^1.11.1"
python-multipart = "^0.0.6"
mypy = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
